--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "debug": "^4.3.4",
     "mongodb-memory-server": "^9.1.8",
