Add userlist to frontend
Refactor profile route

Add newsfeed component

Refactor login component styles

Add signup component

Fix issue with model

Refactor query for feeds

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "index.js",
   "scripts": {
     "client": "cd frontend & npm run dev",
-    "server": "cd backend & npm run server"
+    "server": "cd backend & npm run server",
+    "clienttest": "cd frontend & npm run test",
+    "servertest": "cd backend & npm run test"
   },
   "keywords": [],
   "author": "",
