--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "index.js",
   "scripts": {
     "client": "cd frontend & npm run dev",
-    "server": "cd backend & npm run server"
+    "server": "cd backend & npm run server",
+    "client-test": "cd frontend & npm run test",
+    "server-test": "cd backend & npm run test"
   },
   "keywords": [],
   "author": "",
