--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16",
-    "outDir": "dist"
+    "outDir": "dist",
+    "sourceMap": true
   }
 }
